--- a/metadata.yaml
+++ b/metadata.yaml
@@ -26,5 +26,6 @@ subjects:
 - !lcc 'PS'
 - !lcsh 'Adventure stories'
 - !lcsh 'Western stories'
+- GITenberg
 title: Jack Ranger's Western Trip; Or, from Boarding School to Ranch and Range
 url: http://www.gutenberg.org/ebooks/7496
